# cclap

./: CMakeLists.txt  README.md
include/: arg-parser.h  cclap.h
include/cclap/: cclap.h
src/: CMakeLists.txt  arg-parser.cpp  cclap.cpp
test/: CMakeLists.txt  arg-parser-test.cpp  example-usage.cpp
